# murrayc-suffix-tree

./: .gitignore  Makefile.am  README.md  configure.ac  murrayc-suffix-tree.pc.in
murrayc-suffix-tree/: iter_range.h  node.h  radix_tree.h  suffix_array.h  suffix_tree.h  trie.h
src/trees/: node.h
src/trees/radix_tree/: main.cc  radix_tree.cc  radix_tree.h
src/trees/suffix_tree/: main.cc  suffix_tree.cc  suffix_tree.h
src/trees/trie/: trie.cc
tests/: test_radix_tree.cc  test_suffix_array.cc  test_suffix_tree.cc  test_trie.cc
